crates/rskim-core/tests/snapshots/truncation_golden__go_simple_structure_max15.snap
---
source: crates/rskim-core/tests/truncation_golden.rs
expression: "snap(GO_SIMPLE, Language::Go,\nTransformConfig::with_mode(Mode::Structure).with_max_lines(15))"
---
// ... (7 lines truncated)
func Add(a int, b int) int  {...}
// ... (3 lines truncated)
func Greet(name string) string  {...}
// ... (3 lines truncated)
type Calculator struct {
    value int
}
// ... (5 lines truncated)
type Computer interface {
    Compute(x int) int
}
// ... (1 line truncated)
type Status int
// ... (6 lines truncated)
