crates/rskim-core/tests/snapshots/truncation_golden__go_simple_structure_max5.snap
---
source: crates/rskim-core/tests/truncation_golden.rs
expression: "snap(GO_SIMPLE, Language::Go,\nTransformConfig::with_mode(Mode::Structure).with_max_lines(5))"
---
// ... (15 lines truncated)
type Calculator struct {
    value int
}
// ... (16 lines truncated)
