crates/rskim-core/tests/snapshots/truncation_golden__go_simple_types_unbounded.snap
---
source: crates/rskim-core/tests/truncation_golden.rs
expression: "snap(GO_SIMPLE, Language::Go, TransformConfig::with_mode(Mode::Types))"
---
type Calculator struct {
    value int
}

type Computer interface {
    Compute(x int) int
}

type Status int
