crates/rskim-core/tests/snapshots/truncation_golden__md_simple_pseudo_last10.snap
---
source: crates/rskim-core/tests/truncation_golden.rs
expression: "snap(MD_SIMPLE, Language::Markdown,\nTransformConfig::with_mode(Mode::Pseudo).with_last_lines(10))"
---
<!-- ... (27 lines above) -->

Setext Style H1
===============

This is an alternate header style.

Setext Style H2
---------------

Another setext style header.
