crates/rskim-core/tests/snapshots/truncation_golden__md_simple_pseudo_max5.snap
---
source: crates/rskim-core/tests/truncation_golden.rs
expression: "snap(MD_SIMPLE, Language::Markdown,\nTransformConfig::with_mode(Mode::Pseudo).with_max_lines(5))"
---
# Main Title

This is some introductory content that should not appear in structure mode.

<!-- ... (33 lines truncated) -->
