crates/rskim-core/tests/snapshots/truncation_golden__md_simple_pseudo_unbounded.snap
---
source: crates/rskim-core/tests/truncation_golden.rs
expression: "snap(MD_SIMPLE, Language::Markdown, TransformConfig::with_mode(Mode::Pseudo))"
---
# Main Title

This is some introductory content that should not appear in structure mode.

## Section One

Content for section one with implementation details.

### Subsection 1.1

More detailed content here.

#### Deep Header Level 4

This is a level 4 header that should only appear in signatures/types modes.

##### Even Deeper Level 5

Level 5 header for comprehensive extraction.

###### Deepest Level 6

The deepest markdown header level.

## Section Two

Another major section with content.

Setext Style H1
===============

This is an alternate header style.

Setext Style H2
---------------

Another setext style header.
