crates/rskim-core/tests/snapshots/truncation_golden__md_simple_signatures_unbounded.snap
---
source: crates/rskim-core/tests/truncation_golden.rs
expression: "snap(MD_SIMPLE, Language::Markdown,\nTransformConfig::with_mode(Mode::Signatures))"
---
# Main Title

## Section One

### Subsection 1.1

#### Deep Header Level 4

##### Even Deeper Level 5

###### Deepest Level 6

## Section Two

Setext Style H1
===============

Setext Style H2
---------------
